src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Content_Pack_Name__c</fullName>
        <formula>Content_Pack__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Content Pack Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Pack__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content Pack</label>
        <referenceTo>Content_Pack__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <picklist>
            <picklistValues>
                <fullName>7:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Line_Item_Commission_Percent__c</fullName>
        <formula>PricebookEntry.Product2.Adjustment_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated from the product line item level</inlineHelpText>
        <label>xLine Item Commission Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Migrate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Migrate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Modality__c</fullName>
        <label>Modality</label>
        <picklist>
            <picklistValues>
                <fullName>Onsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecoaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite PLUS Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STAR12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_hours__c</fullName>
        <inlineHelpText>Please enter the quantity of hours for this training item</inlineHelpText>
        <label>xNumber of hours</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OldSalesforceID__c</fullName>
        <externalId>true</externalId>
        <label>OldSalesforceID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>IF( Type__c = &apos;Custom&apos; || Type__c = &apos;Custom Lite&apos;,  Content_Pack_Name__c ,PricebookEntry.Product2.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <picklist>
            <picklistValues>
                <fullName>7:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>9:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Topic_Name__c</fullName>
        <inlineHelpText>If different that Product Name, for Custom-lite events</inlineHelpText>
        <label>Topic Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workbook_Country__c</fullName>
        <label>Workbook Country</label>
        <picklist>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Workbook_ID__c</fullName>
        <label>Workbook ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workbook_Location__c</fullName>
        <label>Workbook Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workbook_UPC__c</fullName>
        <label>Workbook UPC</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>Cannot_change_name_unless_Custom</fullName>
        <active>true</active>
        <description>If the Opportunity record type is not Custom, the user can&apos;t change the Name of the topic/session.</description>
        <errorConditionFormula>NOT(Opportunity.RecordType.Id= &quot;012G0000001QN3Y&quot; ) 
 &amp;&amp;   ISCHANGED( Topic_Name__c )</errorConditionFormula>
        <errorMessage>Opportunity record type must be Custom to have a different name applied. Please change the record type before making the name change.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>no_Zero_amount_opp_products</fullName>
        <active>true</active>
        <errorConditionFormula>AND(UnitPrice =0, 
$Setup.VRS__c.no_Zero_amount_opp_products__c = False)</errorConditionFormula>
        <errorMessage>Only Managers or Operations can enter $0 Products.</errorMessage>
    </validationRules>
</CustomObject>